[project]
name = "tgppuserlocationinfo"
version = "0.1.0"
description = "A tool for retrieving and managing user location information based on 3GPP standards"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.2",
]
homepage = "https://github.com/fxyzbtc/tgppuserlocationinfo"


[project.scripts]
tgppuserlocationinfo = "tgppuserlocationinfo.main:app"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
